# nav2-car

./: README.md  car_nav2.xmind
car_mode/: CMakeLists.txt  package.xml
car_mode/config/: nav2.yaml  slam.yaml
car_mode/launch/: nav2_car.launch.py  sdf_parser.launch.py
car_mode/map/: map.pgm  map.yaml
car_mode/meshes/: Joker.dae  car.dae
car_mode/models/: car.sdf  car_urdf.sdf  joker.sdf  turtlebot3_waffle.urdf  waffle.sdf
car_mode/rviz/: car_mode.rviz
car_mode/src/: scan_pub.cpp
car_mode/worlds/: maze.sdf
